chore: implement Yann review comments (round 2)